apps/DEL-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-liberty-service
  namespace: liberty-project
spec:
  selector:
    app: jpa20cdiwar
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9080
